# tanik

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  OWNER-ACTIONS.md  README.md  ROADMAP.md  docker-compose.yml
.claude/agents/: architect-review.md  implementer.md  pm-spec.md  qa-reviewer.md
.claude/commands/: handoff.md  load.md  resume.md  smart-commit.md
.claude/hooks/: pre-tool-safety.sh
.claude/skills/: database-change.md  fix-bug-backend.md  fix-bug-client.md  new-api-endpoint.md  new-component.md  quick-fix.md
.github/workflows/: backend.yml  client.yml
apps/client/: .dockerignore  .gitignore  (+7 more)
apps/inference/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/inference/tanik_inference/: config.py  db.py  engines.py  errors.py  fingerprint_engine.py  fusion.py  iris_engine.py  logging.py  main.py  schemas.py  storage.py  validators.py
apps/inference/tanik_inference/routes/: fingerprint.py  health.py  iris.py  verify.py
apps/inference/tests/: conftest.py  test_engines_interface.py  test_fingerprint_endpoints.py  test_fingerprint_engine.py  test_fusion.py  test_health.py  test_iris_endpoints.py  test_storage.py  test_unified_verify.py  test_validators.py
docs/: README.md  admin-api.md  admin-dashboard.md  api-contract.md  architecture.md  blog-post-draft.md  casia-iris-access.md  comparison.md  datasets.md  development.md  fusion.md  glossary.md  nd-iris-0405-access.md  pad.md  performance.md  polyu-iris-access.md  privacy.md  proline-pitch-deck.md  sequence-flow.md  threat-model.md
notebooks/: 00_iris_spike.ipynb  README.md
(+23 files in other folders)
